Add neo4j client and serve static files
