# routes/user-postgres.js
@@ -4,7 +4,7 @@ const router = express.Router();
 const users = require('../models/user-postgres');
 
 router.post('/', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         if(req.body.number && req.body.batch) {
             res.status(201).json(await users.createMany(req.body.number, req.body.batch));
@@ -17,7 +17,7 @@ router.post('/', async(req, res, next) => {
 });
 
 router.get('/', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.findAll(req.query.skip, req.query.take));
     } catch (e) {
@@ -26,7 +26,7 @@ router.get('/', async(req, res, next) => {
 });
 
 router.get('/:id', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.findById(req.params.id));
     } catch (e) {
@@ -35,7 +35,7 @@ router.get('/:id', async(req, res, next) => {
 });
 
 router.get('/:id/followers', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.findFollowers(req.params.id, req.query.skip, req.query.take));
     } catch (e) {
@@ -44,7 +44,7 @@ router.get('/:id/followers', async(req, res, next) => {
 });
 
 router.get('/:id/following', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.findFollowing(req.params.id, req.query.skip, req.query.take));
     } catch (e) {
@@ -53,7 +53,7 @@ router.get('/:id/following', async(req, res, next) => {
 });
 
 router.put('/:id', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.update(req.params.id, req.body.email, req.body.name));
     } catch (e) {
@@ -62,7 +62,7 @@ router.put('/:id', async(req, res, next) => {
 });
 
 router.put('/:id/follow', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.follow(req.params.id, req.body.personToFollowId));
     } catch (e) {
@@ -71,7 +71,7 @@ router.put('/:id/follow', async(req, res, next) => {
 });
 
 router.put('/:id/unfollow', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.unfollow(req.params.id, req.body.personToUnfollowId));
     } catch (e) {
@@ -80,7 +80,7 @@ router.put('/:id/unfollow', async(req, res, next) => {
 });
 
 router.put('/:id/purchase', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.purchase(req.params.id, req.body.productId));
     } catch (e) {
@@ -89,7 +89,7 @@ router.put('/:id/purchase', async(req, res, next) => {
 });
 
 router.delete('/:id', async(req, res, next) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Postgres/Users']
     try {
         res.status(200).json(await users.remove(req.params.id));
     } catch (e) {
